--- a/src/Clusters/Clusters.csproj
+++ b/src/Clusters/Clusters.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
+    <PackageReference Include="Accord.Statistics" Version="3.8.0" />
     <PackageReference Include="Accord.Text" Version="3.8.0" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
   </ItemGroup>
