--- a/src/Clusters/Clusters.csproj
+++ b/src/Clusters/Clusters.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
     <PackageReference Include="Accord.Statistics" Version="3.8.0" />
     <PackageReference Include="Accord.Text" Version="3.8.0" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="System.IO.Hashing" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
