--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/Clusters.Data/Data/sample-full.csv
+/src/Clusters.Data/Data/sample-full-2.csv
