--- a/src/Clusters.Data/Clusters.Data.csproj
+++ b/src/Clusters.Data/Clusters.Data.csproj
@@ -16,4 +16,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\sample-100.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
