--- a/src/Clusters/Clusters.csproj
+++ b/src/Clusters/Clusters.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Accord.Statistics" Version="3.8.0" />
     <PackageReference Include="Accord.Text" Version="3.8.0" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="MurmurHash.Net" Version="0.0.2" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.5" />
     <PackageReference Include="ZLinq" Version="1.5.2" />
   </ItemGroup>
